gac_sb/objects/Validation_technique__c.object
<CustomObject>
    <description>Objet pour la gestion des validation techniques</description>
    <fields>
        <fullName>Avis_technique__c</fullName>
        <label>Avis technique</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Favorable</fullName>
                </value>
                <value>
                    <fullName>Défavorable</fullName>
                </value>
                <value>
                    <fullName>Sous réserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ETP_R_D__c</fullName>
        <formula>TEXT(Opportunit__r.CIR_Effectif_RD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETP R&amp;D</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectif__c</fullName>
        <formula>Opportunit__r.Account.Effectif_site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effectif</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envoi_email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Envoi un email au CA, au CC et à l&apos;assistante commerciale les informant de l&apos;état de la validation technique</description>
        <inlineHelpText>Si cochée, un email est envoyé au CA, au CC et à l&apos;assistante commerciale les informant de l&apos;état de la validation technique.</inlineHelpText>
        <label>Envoi email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notre_savoir_faire_GAC_d_montr__c</fullName>
        <description>Notre savoir faire GAC démontré sur des environnement similiares</description>
        <label>Savoir faire GAC envi. similaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunité</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Validations techniques</relationshipLabel>
        <relationshipName>Validations_techniques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optionnel__c</fullName>
        <label>Optionnel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Soci_t_agr_e__c</fullName>
        <label>Société agréée</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>oui</fullName>
                </value>
                <value>
                    <fullName>non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_trigger__c</fullName>
        <description>Utilisé pour le tests du trigger</description>
        <label>Test trigger</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VT_Clients_principaux_de_l_entreprise__c</fullName>
        <description>Clients principaux de l’entreprise</description>
        <label>Clients principaux de l’entreprise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VT_Contrats_remport_s_r_cemment__c</fullName>
        <description>Contrats remportés récemment</description>
        <label>Contrats remportés récemment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VT_Exemples_d_activit_s_qui_pourraient__c</fullName>
        <description>Exemples d’activités qui pourraient être éligibles</description>
        <label>Exemples activités éligibles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VT_Produit_Descriptif_de_l_activit__c</fullName>
        <description>Produit/Descriptif de l’activité</description>
        <label>Produit/Descriptif de l’activité</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VT_R_f_rences_clients__c</fullName>
        <description>Références clients</description>
        <label>Références clients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>societe__c</fullName>
        <formula>Opportunit__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Société</label>
        <type>Text</type>
    </fields>
    <label>Validation technique</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>societe__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>VT-{0000}</displayFormat>
        <label>Validation technique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validations techniques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>